fixed spacing for drawer elements, close other drawers when a new one opens

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -11,7 +11,7 @@
     flex-direction:  row;
     justify-content: space-between;
     align-items:     center;
-    padding:         3rem 30px;
+    padding:         3rem 24px;
     z-index:         $zIndexNavbar;
 
     @media (min-width: $screen-sm)
@@ -174,6 +174,7 @@
         .mainMenu
         {
             width: auto;
+            z-index: 3;
 
             @media (min-width: $screen-sm)
             {
@@ -206,7 +207,7 @@
             width:               50px;
             border-radius:       50%;
             background-color:    $colorGrayLight;
-            margin:              0 0.5rem 0 1rem;
+            margin:              0 0.5rem 0 0;
             background-size:     cover;
             background-position: center center;
             border:              2px solid $colorWhite;
@@ -229,7 +230,7 @@
         position:   fixed;
         top:        0;
         right:      0;
-        width:      40%;
+        width:      500px;
         height:     100vh;
         background: rgba(14, 9, 39, 0.86);
         overflow-y: scroll;
@@ -242,8 +243,8 @@
         .closeLeaderboard
         {
             position: absolute;
-            top:      90px;
-            right:    30px;
+            top:      100px;
+            right:    24px;
             width:    20px;
             height:   20px;
             cursor:   pointer;
@@ -251,7 +252,7 @@
 
         .leaderboardHeading
         {
-            margin:         80px 0 90px 50px;
+            margin:         90px 24px 90px 24px;
             font-size:      30px;
             line-height:    39px;
             letter-spacing: 0.75px;
