--- a/src/components/Notifications/styles.module.scss
+++ b/src/components/Notifications/styles.module.scss
@@ -5,31 +5,26 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    padding: 150px 0 40px 0;
+    padding: 90px 0 40px 0;
     width: 100vw;
     height: 100vh;
     right: 0;
     top: 0;
-    background-color: $colorPrimary;
+    background-color: rgba(14, 9, 39, 0.86);
     z-index: 2;
     overflow-y: scroll;
 
     @media (min-width: $screen-sm) {
-        width: 40vw;
+        width: 500px;
         background-color: $colorPrimary90;
     }
 
-    @media (min-width: $screen-lg) {
-        width: 40vw;
-    }
-
     .notificationsHeader {
-        width: 90%;
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
         justify-content: space-between;
-        margin: 0 5% 50px 5%;
+        margin: 0 24px 50px;
 
         .closeNotifications {
             width: 20px;
@@ -61,10 +56,8 @@
     }
 
     .markRead {
-        position: absolute;
-        right: 0;
-        top: 200px;
-        margin: 0 5% 25px 0;
+        position: relative;
+        margin: 0 24px 10px 0;
         text-align: right;
         font-size: 14px;
         line-height: 18px;
