--- a/src/components/NotificationsItem/styles.module.scss
+++ b/src/components/NotificationsItem/styles.module.scss
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 41px 21px 18px 21px;
+    padding: 41px 24px 18px;
     background-color: #27223f;
 
     .notificationCardContent {
